Don't shut down OpenVR render loop on connection errors

A normal immersive session shutdown triggers this error handler,
and stopping the render loop lost a pending gamepad_callback_,
so future immersive sessions weren't seeing the controllers
anymore. Instead, keep the render loop running, it'll be cleaned
up when exiting the page entirely.

BUG=875187

Cq-Include-Trybots: luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I89a333a9cd104069d6e228248608957bec665a91
Reviewed-on: https://chromium-review.googlesource.com/1194252
Reviewed-by: Bill Orr <billorr@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587130}
Former-commit-id: 4d605bd014db7b9628b512a3eabbf375524133e2